compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__unqualified_import_errors_do_not_block_later_unqualified.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 307
expression: "import gleam.{Unknown, type Int as Integer}\n\npub fn main() -> Integer {\n  Nil\n}"
snapshot_kind: text
---
----- SOURCE CODE
import gleam.{Unknown, type Int as Integer}

pub fn main() -> Integer {
  Nil
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:15
  │
1 │ import gleam.{Unknown, type Int as Integer}
  │               ^^^^^^^

The module `gleam` does not have a `Unknown` value.

error: Type mismatch
  ┌─ /src/one/two.gleam:4:3
  │
4 │   Nil
  │   ^^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Integer

Found type:

    Nil
